--- a/sass/app.scss
+++ b/sass/app.scss
@@ -15,6 +15,12 @@
 @import "BoldItalic";
 @import "Black";
 
+/* Google's private font - use if you like getting sued */
+@font-face {
+  font-family: 'Product Sans';
+  src: url('fonts/product_sans.woff2') format('woff2');
+  font-style: normal;
+}
 
 
 /* GLOBAL VARIABLES */
@@ -40,3 +46,4 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
 }
+
