--- a/sass/app.scss
+++ b/sass/app.scss
@@ -25,8 +25,9 @@
 
 /* GLOBAL VARIABLES */
 
-$THEME_COLOR: #1C2432;
-$THEME_ACCENT: #1C2432;
+$THEME_COLOR: #F8E64F;
+$THEME_ACCENT: #252525;
+$THEME_SECOND: #28cb75;
 
 
 
@@ -42,8 +43,119 @@ html {
 }
 
 body {
-  background: #eee;
+  background: url('../img/paper-background.png');
   overflow-y: auto;
   overflow-x: hidden;
 }
 
+
+/* INDEX APP */
+
+.app-banner {
+  @include transitions(500ms);
+  position: absolute;
+  background: #f2f2f2;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  @include d2;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1500;
+}
+
+.speech-button {
+  background: $THEME_SECOND;
+  @include transitions(500ms);
+  border-radius: 3px;
+  padding: 15px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  width: 400px;
+  border: 0;
+  display: block;
+  margin: 10px auto;
+}
+
+.speech-text {
+  @include transitions(500ms);
+  padding: 10px 15px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  width: 370px;
+}
+
+.progress-bar-wrapper {
+  @include transitions(500ms);
+  position: relative;
+  background: #f6f6f6;
+  border-radius: 50px;
+  width: 400px;
+  height: 10px;
+  overflow: hidden;
+  z-index: 999;
+  margin: 0 auto;
+  padding: 0;
+  opacity: 0;
+}
+
+.progress-bar {
+  @include transitions(500ms);
+  background: #1E88E5;
+  width: 0px;
+  z-index: 1000;
+  position: relative;
+  border-radius: 50px;
+  height: 10px;
+  margin: 0;
+}
+
+.vert-align {
+  @include transitions(500ms);
+  position: absolute;
+  height: 500px;
+  width: 500px;
+  left: 50%;
+  margin-left: -250px;
+  top: 50%;
+  margin-top: -250px;
+  z-index: 2000;
+}
+
+.-under{
+  z-index: 1200;
+}
+
+.-retry {
+  opacity: 0;
+  width: 500px;
+  margin: 30px auto 0;
+}
+
+.logo-area {
+  @include transitions(500ms);
+  position: relative;
+  height: 120px;
+  width: 120px;
+  margin: 0 auto 10px;
+  background-image: url("../img/logo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+}
+
+.speech-area {
+  @include transitions(500ms);
+  line-height: 25px;
+}
+
+h1 {
+  margin: 0 0 25px;
+}
